Fix signin modal on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -390,6 +390,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33323232', e
   }
 }
 
+#signUp {
+  z-index: 1050;
+}
+
 
 .home_about, .items_home, .signup_home {
   padding: 70px 0;
